enhancements in EventManager and DelayEventManager code improvements and enhance performance, skipping the reflections overhead by adding a new RegisteredListener record