@@ -4,136 +4,191 @@ import com.habbashx.tcpserver.event.Event;
 import com.habbashx.tcpserver.event.Priority;
 import com.habbashx.tcpserver.event.handler.EventHandler;
 import com.habbashx.tcpserver.listener.Listener;
+import com.habbashx.tcpserver.socket.server.Server;
 import com.habbashx.tcpserver.socket.server.foundation.ServerFoundation;
 import org.jetbrains.annotations.NotNull;
 
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
-import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 /**
- * The EventManager class is responsible for managing event listeners and triggering events in the system.
- * It handles the registration, unregistration, sorting, and execution of listeners for various event types.
- * It also ensures that events can be processed either synchronously or asynchronously based on their configuration.
+ * The EventManager is responsible for managing event listeners and dispatching events
+ * to the appropriate listeners in an efficient and scalable manner.
+ *
+ * <p>
+ * This implementation is optimized to avoid runtime reflection by requiring listeners
+ * to explicitly declare their event type via {@link Listener#getEventType()}. This allows
+ * the manager to precompute and index listeners by event type during registration,
+ * resulting in fast event dispatching.
+ * </p>
+ *
+ * <p>
+ * Features:
+ * <ul>
+ *     <li>Efficient event dispatching using direct lookup (O(1) per event type)</li>
+ *     <li>Support for listener prioritization</li>
+ *     <li>Optional asynchronous event handling</li>
+ *     <li>Inheritance-aware event propagation</li>
+ *     <li>Thread-safe listener storage</li>
+ * </ul>
+ * </p>
  */
 public class EventManager {
 
     private final ServerFoundation serverFoundation;
 
     /**
-     * A list that holds all the listeners registered to the EventManager.
-     * Each listener in this list implements the {@link Listener} interface
-     * and reacts to specific types of events defined by the generic type parameter.
+     * A mapping between event types and their corresponding registered listeners.
+     *
      * <p>
-     * The {@code registeredListeners} collection is used internally to manage
-     * event callbacks and to dispatch events to the appropriate listeners.
-     * <p>
-     * This field is immutable and initialized as an {@code ArrayList}. Elements
-     * can be added or removed through methods provided by the EventManager class.
+     * Each event class maps to a list of {@link RegisteredListener} instances
+     * that should be invoked when that event is triggered.
+     * </p>
      */
-    private final List<Listener<?>> registeredListeners = new ArrayList<>();
+    private final Map<Class<?>, List<RegisteredListener<?>>> registeredListeners = new ConcurrentHashMap<>();
 
     /**
-     * An ExecutorService instance used for asynchronous operations within the EventManager.
-     * This executor operates using a cached thread pool, allowing for efficient handling of
-     * tasks with dynamically growing or shrinking thread usage based on demand.
-     * It is utilized for executing event-related tasks in a non-blocking manner.
+     * Executor used for handling asynchronous event execution.
+     *
+     * <p>
+     * This implementation uses virtual threads (Project Loom) to efficiently
+     * handle a large number of concurrent tasks with minimal overhead.
+     * </p>
      */
-    private final ExecutorService asyncExecutor = Executors.newCachedThreadPool();
+    private final ExecutorService asyncExecutor = Executors.newVirtualThreadPerTaskExecutor();
 
 
+    /**
+     * Constructs a new EventManager instance.
+     *
+     * @param serverFoundation the server foundation providing logging and core services
+     */
     public EventManager(ServerFoundation serverFoundation) {
         this.serverFoundation = serverFoundation;
     }
 
     /**
-     * Registers an event listener to the event manager. The method checks if the listener
-     * is annotated with {@code @EventHandler}. If the annotation is present, the listener
-     * is added to the internal list of registered listeners, and the list is sorted based
+     * Registers a listener with the event manager.
+     *
+     * <p>
+     * The listener must be annotated with {@link EventHandler}. During registration,
+     * its event type, priority, and execution mode are extracted and stored for
+     * efficient future dispatch.
+     * </p>
+     *
+     * @param listener the listener to register
+     * @param <E>      the type of event the listener handles
      */
     public <E extends Event> void registerEvent(@NotNull Listener<E> listener) {
 
-        if (listener.getClass().isAnnotationPresent(EventHandler.class)) {
-            registeredListeners.add(listener);
-            sortListeners();
-        } else {
+        final Class<?> clazz = listener.getClass();
+
+        if (!clazz.isAnnotationPresent(EventHandler.class)) {
             serverFoundation.getServerLogger().warning("""
                     this listener %s is missing the @EventHandler annotation
                     listener %s will not be listening for specific event until properly annotated with @EventHandler
-                    """);
+                    """.formatted(clazz.getSimpleName(), clazz.getSimpleName()));
+            return;
         }
 
+        final EventHandler annotation = clazz.getAnnotation(EventHandler.class);
+        final boolean async = annotation.isAsync();
+        final int priority = annotation.priority().getPriority();
+
+        for (final Type type : clazz.getGenericInterfaces()) {
+            if (type instanceof final ParameterizedType pt) {
+
+                final Type actual = pt.getActualTypeArguments()[0];
+
+                if (actual instanceof final Class<?> eventClass) {
+
+                    final RegisteredListener<E> reg =
+                            new RegisteredListener<>(listener, async, priority);
+
+                    registeredListeners
+                            .computeIfAbsent(eventClass, k -> new CopyOnWriteArrayList<>())
+                            .add(reg);
+
+                    registeredListeners.get(eventClass)
+                            .sort(Comparator.comparingInt((RegisteredListener<?> l) -> l.priority).reversed());
+                    logEventRegistration(listener, eventClass, priority);
+                }
+            }
+
+        }
+
+
     }
 
     /**
-     * Unregisters an event listener from the list of registered listeners.
+     * Unregisters a listener by its class name.
      *
-     * @param listenerName the name of the listener to be removed from the registered listeners
+     * <p>
+     * All listeners matching the provided class simple name will be removed
+     * from all event mappings.
+     * </p>
+     *
+     * @param listenerName the simple class name of the listener to remove
      */
-    public void unregisterEvent(String listenerName) {
-        registeredListeners.removeIf(listener -> listener.getClass().getSimpleName().equals(listenerName));
-        sortListeners();
+    public void unregisterEvent(final String listenerName) {
+        for (final List<RegisteredListener<?>> list : registeredListeners.values()) {
+            list.removeIf(l -> l.listener.getClass().getSimpleName().equals(listenerName));
+        }
     }
 
+
     /**
-     * Triggers an event by notifying all registered listeners capable of handling the provided event type.
-     * The method iterates through the list of registered listeners, checks if a listener is designed to handle
-     * the specified event type, and invokes the listener's event handling logic based on its annotation configuration.
-     * If the event was marked as cancelled, no further listeners are notified, and the method returns immediately.
-     * Event handling can be synchronous or asynchronous depending on the {@code EventHandler} annotation's configuration.
+     * Triggers an event and dispatches it to all relevant listeners.
      *
-     * @param <E>   the type of the event being triggered, which must extend the {@code Event} class
-     * @param event the event object to be triggered and passed to applicable listeners
+     * <p>
+     * The method performs a lookup based on the event's class and iterates through
+     * all matching listeners. If inheritance is present, parent event types are
+     * also considered.
+     * </p>
+     *
+     * <p>
+     * If the event is cancelled, further propagation is stopped immediately.
+     * </p>
+     *
+     * @param event the event to trigger
+     * @param <E>   the type of the event
      */
     @SuppressWarnings("unchecked")
-    public <E extends Event> void triggerEvent(E event) {
+    public <E extends Event> void triggerEvent(@NotNull final E event) {
 
-        for (Listener<?> listener : registeredListeners) {
-            Type[] typeArguments = listener.getClass().getGenericInterfaces();
+        if (event.isCancelled()) return;
 
+        Class<?> clazz = event.getClass();
 
-            for (Type typeArgument : typeArguments) {
-                if (typeArgument instanceof ParameterizedType) {
+        while (clazz != null) {
 
-                    Type actualType = ((ParameterizedType) typeArgument).getActualTypeArguments()[0];
-                    if (actualType instanceof Class<?> && ((Class<?>) actualType).isAssignableFrom(event.getClass())) {
-                        EventHandler eventHandler = listener.getClass().getAnnotation(EventHandler.class);
+            final List<RegisteredListener<?>> listeners = registeredListeners.get(clazz);
 
-                        if (!event.isCancelled()) {
-                            if (eventHandler.isAsync()) {
-                                asyncExecutor.submit(() -> {
-                                    ((Listener<E>) listener).onEvent(event);
-                                });
-                            } else {
-                                ((Listener<E>) listener).onEvent(event);
-                            }
-                        } else {
-                            return;
-                        }
+            if (listeners != null) {
+                for (final RegisteredListener<?> reg : listeners) {
+
+                    if (event.isCancelled()) return;
+
+                    final RegisteredListener<E> listener = (RegisteredListener<E>) reg;
+
+                    if (listener.async) {
+                        asyncExecutor.submit(() -> listener.listener().onEvent(event));
+                    } else {
+                        listener.listener().onEvent(event);
                     }
                 }
             }
-        }
-    }
 
-    /**
-     * Sorts the list of registered listeners based on their priority in descending order.
-     * <p>
-     * The priority of each listener is determined using the {@code getPriority} method,
-     * which retrieves the priority level from the {@code @EventHandler} annotation associated
-     * with the listener. If no priority is specified within the annotation, a default priority
-     * level is used. This method ensures that listeners with higher priority values are
-     * positioned earlier in the list.
-     * <p>
-     * This method is invoked internally after adding or removing listeners from the list
-     * to maintain the correct execution order of listeners when events are triggered.
-     */
-    private void sortListeners() {
-        registeredListeners.sort(Comparator.comparingInt(this::getPriority).reversed());
+            clazz = clazz.getSuperclass();
+
+        }
     }
 
     /**
@@ -150,7 +205,42 @@ public class EventManager {
         return (annotation != null) ? annotation.priority().getPriority() : Priority.NORMAL.getPriority();
     }
 
-    public List<Listener<?>> getRegisteredListeners() {
+    private void logEventRegistration(Listener<?> listener, Class<?> eventClass, int priority) {
+
+        if (((Server) serverFoundation).isEventRegistrationLogging()) {
+            serverFoundation.getServerLogger().info(
+                    "Registered listener: "
+                            + listener.getClass().getSimpleName()
+                            + " | Event: "
+                            + eventClass.getSimpleName()
+                            + " | Priority: "
+                            + priority
+            );
+        }
+    }
+
+    /**
+     * Returns the internal mapping of registered listeners.
+     *
+     * <p>
+     * This method is primarily intended for debugging or inspection purposes.
+     * </p>
+     *
+     * @return a map of event types to their corresponding listeners
+     */
+    public Map<Class<?>, List<RegisteredListener<?>>> getRegisteredListeners() {
         return registeredListeners;
+    }
+
+    /**
+     * Internal wrapper record class that stores precomputed metadata for a listener.
+     *
+     * <p>
+     * This avoids repeated reflection and annotation lookups during event dispatch.
+     * </p>
+     *
+     * @param <E> the type of event handled by the listener
+     */
+    private record RegisteredListener<E extends Event>(Listener<E> listener, boolean async, int priority) {
     }
 }
